--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/user/eclipse-workspace/Poliapp/lib/jxbrowser-6.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/eclipse-workspace/Poliapp/lib/jxbrowser-linux64-6.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/eclipse-workspace/Poliapp/lib/jxbrowser-mac-6.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/eclipse-workspace/Poliapp/lib/jxbrowser-win32-6.17.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/eclipse-workspace/Poliapp/lib/license.jar"/>
-	<classpathentry kind="lib" path="C:/Users/user/Downloads/mail.jar"/>
+	<classpathentry kind="lib" path="lib/jxbrowser-6.17.jar"/>
+	<classpathentry kind="lib" path="lib/jxbrowser-linux64-6.17.jar"/>
+	<classpathentry kind="lib" path="lib/jxbrowser-mac-6.17.jar"/>
+	<classpathentry kind="lib" path="lib/jxbrowser-win32-6.17.jar"/>
+	<classpathentry kind="lib" path="lib/license.jar"/>
+	<classpathentry kind="lib" path="lib/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
